Bug: 50871,49321 - Auto-complete progress + no results indicator While waiting for a response, pop up a little waiting msg. It's not added to the autocomplete list, so results won't shift when it goes away. It just appears and then disappears when we display the results. - also fix a bug with autocomplete in the search box that change "under" to "in"
http://bugzilla.zimbra.com/show_bug.cgi?id=50871
http://bugzilla.zimbra.com/show_bug.cgi?id=49321

Copied from Perforce
 Change: 261160

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -2683,6 +2683,14 @@ HTML>BODY .appt-selected .appt_allday_body
 	border-top-color:@ListItemBgColor-normal@;
 }
 
+.acWaiting {
+	@ListItemHeight@
+	background-color:@ListItemBgColor-normal@;
+	width: auto;
+	border: 1px solid @darken(AltC,40)@;
+	padding: 0px 3px;
+}
+
 .ZmPeopleAutocompleteListView td {
     border-width:0px 0px;
 }
